[package]
name = "RustStudy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
mysql = "25"
derive_more = "0.99.0"
dotenv = "0.15"
log = "0.4"
